user 기능 추가중

--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     //mysql
-    //runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     //mariadb
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    //runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
