--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     //Swagger
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    //implementation 'io.springfox:springfox-swagger2:2.9.2'
+    //implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
 }
 
